# CMake-Barebones

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  build.sh
benchmark/: CMakeLists.txt
benchmark/src/: sample.cpp
cmake/: ConfigGTest.cmake  ConfigSafeGuards.cmake
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
tests/src/: test.cpp
